added missing banner

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="banner">
-            <img src="{{ '/assets/images/banner-image.jpg' | relative_url }}" alt="Cyberpunk cityscape">
+            <img src="{{ '/assets/images/banner3.png' | relative_url }}" alt="Gallery of portraits conceptualzied by me">
             <div class="overlay">
                 <h1>Neuraln0ne</h1>
             </div>
