--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -95,5 +95,5 @@ h1::first-letter, h2::first-letter, h3::first-letter, .signature::first-letter {
 
 @font-face {
     font-family: 'Triangular';
-    src: url('../fonts/path-to-your-triangular-font.woff2') format('woff2');
+    src: url('fonts/multivac/multivac-ghost.tff') format('tff');
 }
