--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,19 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <div class="banner">
-            <img src="{{ '/assets/images/banner3.png' | relative_url }}" alt="Gallery of portraits conceptualzied by me">
+            <img src="{{ '/assets/images/banner3.png' | relative_url }}" alt="Cyberpunk cityscape">
             <div class="overlay">
                 <h1>Neuraln0ne</h1>
             </div>
         </div>
-        <nav class="fixed-nav">
-            <div class="signature">N0NE</div>
-        </nav>
     </header>
 
     <main>
@@ -27,7 +23,5 @@
     <footer>
         <p>&copy; 2024 Neuraln0ne. All rights reserved.</p>
     </footer>
-
-    <script src="{{ '/assets/js/script.js' | relative_url }}"></script>
 </body>
 </html>
