--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,14 +7,12 @@
     <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
 </head>
 <body>
-    <header>
-        <div class="banner">
-            <img src="{{ '/assets/images/banner3.png' | relative_url }}" alt="Cyberpunk cityscape">
-            <div class="overlay">
-                <h1>Neuraln0ne</h1>
-            </div>
+    <div class="banner">
+        <img src="{{ '/assets/images/banner-image.png' | relative_url }}" alt="Cyberpunk cityscape">
+        <div class="overlay">
+            <h1>Neuraln0ne</h1>
         </div>
-    </header>
+    </div>
 
     <main>
         {{ content }}
