--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
     <div class="banner">
         <img src="{{ '/assets/images/banner-image.png' | relative_url }}" alt="Cyberpunk cityscape">
         <div class="overlay">
-            <h1>Neuraln0ne</h1>
+            <div class="logo">Neuraln0ne</div>
         </div>
     </div>
 
