--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,8 +1,8 @@
-@import "{{ site.theme }}";
+// @import "{{ site.theme }}";
 
 @font-face {
     font-family: 'Multivac';
-    src: url('../fonts/multivac/multivac-ghost.ttf') format('truetype');
+    src: url('../fonts/multivac/multivac-interference.ttf') format('truetype');
 }
 
 :root {
@@ -11,22 +11,19 @@
     --accent-color: #ff00ff;
 }
 
-body {
-    font-family: 'Multivac', sans-serif;
-    background-color: var(--background-color);
-    color: var(--text-color);
+body, html {
+    height: 100%;
     margin: 0;
     padding: 0;
-}
-
-header {
-    height: 100vh;
+    font-family: 'Multivac', sans-serif;
+    background-color: var(--background-color) !important;
+    color: var(--text-color);
 }
 
 .banner {
     position: relative;
-    height: 100%;
-    overflow: hidden;
+    width: 100%;
+    height: 100vh;
 }
 
 .banner img {
@@ -42,9 +39,20 @@ header {
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
-    display: flex;
-    align-items: center;
-    justify-content: center;
+}
+
+.logo {
+    position: absolute;
+    bottom: 2rem;
+    left: 2rem;
+    font-size: 3rem;
+    color: var(--text-color);
+    text-shadow: 0 0 10px var(--accent-color);
+}
+
+main {
+    padding: 2rem;
+    background-color: var(--background-color);
 }
 
 h1 {
@@ -53,22 +61,21 @@ h1 {
     text-shadow: 0 0 10px var(--accent-color);
 }
 
-main {
-    padding: 2rem;
-}
-
 .entry {
     display: flex;
+    flex-direction: row;
     align-items: center;
-    margin-bottom: 2rem;
+    margin-bottom: 3rem;
 }
 
 .entry-image {
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: 150px;
     border-radius: 50%;
     overflow: hidden;
-    margin-right: 1rem;
+    margin-right: 2rem;
+    flex-shrink: 0;
+    border: 2px solid var(--accent-color);
 }
 
 .entry-image img {
@@ -83,6 +90,7 @@ main {
 
 h2, h3 {
     color: var(--accent-color);
+    margin-bottom: 0.5rem;
 }
 
 footer {
