--- a/src/components/BlogPost.css
+++ b/src/components/BlogPost.css
@@ -13,7 +13,7 @@
   }
   
   .back-button:hover {
-    background-color: #0056b3;
+    background-color: #0057b313;
   }
 
 .blog-post {
@@ -23,8 +23,4 @@
 .blog-post h1 {
     font-size: 2.5em;
     margin-bottom: 20px;
-}
-
-.blog-post h2 {
-    text-align: left !important;
 }
